[tool.poetry]
name = "repl_python3_MY-VERY-OWN-BROWSER"
version = "0.1.0"
description = ""
authors = ["Totallynotnasab <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
